# rust-baranki

./: .env  .gitignore  Cargo.toml  README.md  TODO.txt  da.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
src/api/: mod.rs
src/api/admin/: category.rs  mod.rs  product.rs  upload.rs
src/api/public/: auth.rs  category.rs  mod.rs  product.rs  uploads.rs
src/api/user/: cart.rs  mod.rs
src/entities/: cart.rs  category.rs  image.rs  mod.rs  order.rs  order_part.rs  product.rs  user.rs
src/middleware/: auth.rs  logging.rs
src/routes/: auth_routes.rs  cart_routes.rs  category_routes.rs  mod.rs  product_routes.rs  profile_routes.rs  upload_routes.rs
tests/: auth.rs  cart.rs  category.rs  product.rs  upload.rs
